refactor(learntrade): modify learnTrade pages and i18n

--- a/src/i18n/locales/ar/basicTrading.json
+++ b/src/i18n/locales/ar/basicTrading.json
@@ -2,6 +2,7 @@
   "howToStartTrading": "كيف تبدأ التداول",
   "haventHadExperience": ".ليس لديك خبرة في المعاملات المالية؟ سوف نقوم بتوجيهك خطوة بخطوة لبدء التداول",
   "basicTradingCourse": "الدورة التدريبية الأساسية للتداول",
+  "intermediateTradingCourse": "الدورة  التدريبية المتوسطة للتداول",
   "whatIsForeignExchangeTrading": "ما هو تداول العملات الأجنبية؟",
   "factorsAffectingTheMarket": "العوامل المؤثرة على السوق",
   "basicOperationOfTheMT4Platform": "التشغيل الأساسي لمنصة MT4",
@@ -73,7 +74,7 @@
   "productCategory": "7. فئة المنتج: إختر أهدافك للتداول",
   "lotsEnterTheLotSize": "اللوتات (النقاط): أدخل حجم اللوت، الحد الأدنى هو 0.01 لوت (فوركس، ذهب وفضة). سعر إيق",
   "stopLossPrice": "اف الخسارة: عندما يصل السعر إلى السعر المحدد، يتم إغلاق المركز تلقائياً؛ الافتراضي هو صفر، مما يعني أنه لم يتم تعيين وقف الخسارة. ",
-  "takeProfitprice": "سعر جني الأرباح: سوف يتم إغلاق المركز تلقائيًا للحفاظ على الربح عندما يصل السعر إلى السعر المحدد؛ الافتراضي هو صفر، مما يعني أنه لم يتم تعيين جني الأرباح. ",
+  "takeProfitPrice": "سعر جني الأرباح: سوف يتم إغلاق المركز تلقائيًا للحفاظ على الربح عندما يصل السعر إلى السعر المحدد؛ الافتراضي هو صفر، مما يعني أنه لم يتم تعيين جني الأرباح. ",
   "sellAtMarketPriceOrBuy": "Sell ​​at market price or buy at market price: click the red button to sell, and click the blue button to buy.",
   "theOrderTypeColumn": "في عمود \"نوع الأمر\" داخل نافذة الأمر، يكون التحديد الافتراضي هو \"سعر السوق\" ، مما يعني إنشاء صفقة بسعر السوق الحالي. ",
   "pendingOrder": "8. أمر معلق",
@@ -125,7 +126,5 @@
   "commodityFuturesAreAlso": "العقود الآجلة الخاصة بالسلع هي أيضًا نوع من الأصول المالية. إنه يمثل اتفاقية لشراء أو بيع الكمية المذكورة من سلعة معينة، مثل البلاتين أو النحاس أو النفط الخام في تاريخ وسعر محددين مسبقًا. نظرًا لأن أسعار السلع تتقلب دائمًا مع التغيرات في العرض والطلب، فيمكن للمتداولين المضاربة على تقلبات الأسعار عن طريق شراء وبيع العقود الآجلة للسلع. إذا كنت تتداول العقود مقابل الفروقات للبلاتين من خلال WCG، فيمكنك التنبؤ بما إذا كان سعر البلاتين سيرتفع أو ينخفض ​​في المستقبل وتقرر ما إذا كنت ستفتح أمر بيع أو شراء. تشمل العقود مقابل الفروقات السلعية التي تقدمها WCG أيضًا النحاس والنفط الخام (خام تكساس الخفيف WTI والنفط الخام برينت BRENT). ",
   "byOpeningAnAccountThrough": "من خلال فتح حساب في WCG، يمكنك تداول العملات الأجنبية ومؤشر الأسهم أو عقود الفروقات الآجلة الخاصة بالسلع على نفس المنصة والحساب. ستتمكن من التنقل بحرية بين سوق الصرف الأجنبي وأسواق العقود مقابل الفروقات المختلفة، وفتح وإغلاق المراكز بدقة.",
   "whatAreTheAdvantages": "ما هي مزايا تداول العقود مقابل الفروقات؟",
-  "theMostSignificantAdvantage": "إن الميزة الأكثر أهمية لتداول العقود مقابل الفروقات هي أنه يمكنك استخدام رافعة مالية تصل إلى 100 مرة، مما يعني أنه يمكنك فتح معاملات أكبر برأس مال مبدئي أقل وتكاليف صفقات صغيرة نسبيًا. يجب ملاحظة أنه على الرغم من أن الرافعة المالية يمكن أن تضخم الأرباح، إلا أنها ستؤدي أيضًا إلى تضخيم الخسائر. لذلك، فإنك تحتاج إلى اعتماد استراتيجيات مناسبة لإدارة المخاطر عند تداول العقود مقابل الفروقات برافعة مالية. العقود مقابل الفروقات تدعم أيضًا التداول بطريقتين، سواء كان سوقًا هبوطيًا أو سوقًا صاعدًا، يمكنك الشراء والبيع بحرية، ولن يتم تحصيل أي عمولة أو رسوم تمويل من العملية بالكامل. قم بتداول جميع المنتجات على حساب واحد واستفد بشكل كامل من فرص التداول المتعددة التي توفرها لك WCG.",
-  "intermediateTradingCourse": "الدورة التدريبية المتوسطة للتداول",
-  "advancedTradingCourse": "الدورة  التدريبية المتقدمة للتداول"
+  "theMostSignificantAdvantage": "إن الميزة الأكثر أهمية لتداول العقود مقابل الفروقات هي أنه يمكنك استخدام رافعة مالية تصل إلى 100 مرة، مما يعني أنه يمكنك فتح معاملات أكبر برأس مال مبدئي أقل وتكاليف صفقات صغيرة نسبيًا. يجب ملاحظة أنه على الرغم من أن الرافعة المالية يمكن أن تضخم الأرباح، إلا أنها ستؤدي أيضًا إلى تضخيم الخسائر. لذلك، فإنك تحتاج إلى اعتماد استراتيجيات مناسبة لإدارة المخاطر عند تداول العقود مقابل الفروقات برافعة مالية. العقود مقابل الفروقات تدعم أيضًا التداول بطريقتين، سواء كان سوقًا هبوطيًا أو سوقًا صاعدًا، يمكنك الشراء والبيع بحرية، ولن يتم تحصيل أي عمولة أو رسوم تمويل من العملية بالكامل. قم بتداول جميع المنتجات على حساب واحد واستفد بشكل كامل من فرص التداول المتعددة التي توفرها لك WCG."
 }
