--- a/src/i18n/locales/ar/intermediateTrading.json
+++ b/src/i18n/locales/ar/intermediateTrading.json
@@ -1,10 +1,10 @@
 {
   "understandChartPatterns": "افهم أنماط الرسم البياني",
   "makeYourTradingMore": ".اجعل تداولك أكثر سهولة من خلال دراسة البيانات التاريخية وفهم أنماط الرسم البياني ذات الصلة",
-  "intermediateTradingCourse": "الدورة  التدريبية الأساسية للتداول",
-  "basicTradingCourse": "الدورة  التدريبية المتوسطة للتداول",
+  "intermediateTradingCourse": "دورة التجارة الوسيطة",
+  "basicTradingCourse": "الدورة التدريبية الأساسية للتداول",
   "advancedTradingCourse": "الدورة  التدريبية المتقدمة للتداول",
-  "mT4Tips": "نصائح MT4",
+  "MT4Tips": "نصائح MT4",
   "riskManagement": "إدارة المخاطر",
   "howToCreateATradingStrategy": "كيفية إنشاء استراتيجية للتداول؟",
   "commonChartPatterns": "أنماط الرسم البياني الشائعة",
