--- a/src/i18n/locales/cn/basicTrading.json
+++ b/src/i18n/locales/cn/basicTrading.json
@@ -2,6 +2,7 @@
   "howToStartTrading": "如何开始进行交易",
   "haventHadExperience": "还未拥有金融交易的经验？我们将一步步地指导您开始进行交易。",
   "basicTradingCourse": "初级交易课程",
+  "intermediateTradingCourse": "中级交易课程",
   "whatIsForeignExchangeTrading": "什么是外汇交易",
   "factorsAffectingTheMarket": "影响市场的因素",
   "basicOperationOfTheMT4Platform": "MT4平台基础操作",
@@ -73,7 +74,7 @@
   "productCategory": "7。交易品种：选择交易对象",
   "lotsEnterTheLotSize": "手数：输入交易量大小，最低为0.01手（外汇、黄金和白银）。",
   "stopLossPrice": "止损价：当价格达到指定价格时，自动平仓停止损失；默认为零，代表不设置止损。",
-  "takeProfitprice": "获利价：当价格达到指定价格时，自动平仓保住获利；默认为零，代表不设置止盈。",
+  "takeProfitPrice": "获利价：当价格达到指定价格时，自动平仓保住获利；默认为零，代表不设置止盈。",
   "sellAtMarketPriceOrBuy": "于市价卖或于市价买：点击红色按钮卖出，点击蓝色按钮买入。",
   "theOrderTypeColumn": "订单视窗内的「交易类型」栏目，默认选择的是「市价成交」，意思是要按照当前市价建立交易。",
   "pendingOrder": "8。挂单交易",
@@ -125,7 +126,5 @@
   "commodityFuturesAreAlso": "大宗商品期货也是一种金融资产，它代表了一种协议，即以预先确定的日期和价格买进或卖出一定数量的某种大宗商品，例如白金、铜或原油。由于大宗商品的价格总是随着供求关系的变化而波动，交易者可以通过买卖大宗商品期货来对其价格波动进行投机。如果您通过WCG交易白金差价合约，您可以预测白金在未来的价格会上涨还是下跌，从而决定是开买单还是卖单。WCG提供的大宗商品差价合约还包括铜和原油（得克萨斯轻质原油WTI和布伦特BRENT原油）。",
   "byOpeningAnAccountThrough": "通过WCG开户，您可以在同一个平台、同一个帐户上交易外汇以及股指或大宗商品差价合约。您将可以自如地穿梭于外汇市场和不同的差价合约市场中，并精确、高速地执行开仓和平仓操作。",
   "whatAreTheAdvantages": "差价合约交易有哪些优势？",
-  "theMostSignificantAdvantage": "交易差价合约最为显著的好处是，您可以使用高达100倍的杠杆，这意味着您能以更低的启动资金以及相对较小的交易成本来开设更大金额的交易。需要注意的是，尽管杠杆可以放大盈利，它同时也会放大亏损，因此在进行差价合约的杠杆交易时，您需要采取合适的风险管理策略。差价合约还支持双向交易，无论是熊市还是牛市，您都可以买卖自如，整个过程中WCG不会收取任何佣金或融资费用。在一个帐户上交易所有产品，充分利用WCG为您提供的多重交易机会。",
-  "intermediateTradingCourse": "中级交易课程",
-  "advancedTradingCourse": "高级交易课程"
+  "theMostSignificantAdvantage": "交易差价合约最为显著的好处是，您可以使用高达100倍的杠杆，这意味着您能以更低的启动资金以及相对较小的交易成本来开设更大金额的交易。需要注意的是，尽管杠杆可以放大盈利，它同时也会放大亏损，因此在进行差价合约的杠杆交易时，您需要采取合适的风险管理策略。差价合约还支持双向交易，无论是熊市还是牛市，您都可以买卖自如，整个过程中WCG不会收取任何佣金或融资费用。在一个帐户上交易所有产品，充分利用WCG为您提供的多重交易机会。"
 }
