--- a/src/i18n/locales/en/intermediateTrading.json
+++ b/src/i18n/locales/en/intermediateTrading.json
@@ -4,7 +4,7 @@
   "intermediateTradingCourse": "Intermediate Trading Course",
   "basicTradingCourse": "Basic Trading Course",
   "advancedTradingCourse": "Advanced Trading Course",
-  "mT4Tips": "MT4 tips",
+  "MT4Tips": "MT4 tips",
   "riskManagement": "Risk management",
   "howToCreateATradingStrategy": "How to create a trading strategy",
   "commonChartPatterns": "Common chart patterns",
