--- a/src/i18n/locales/id/intermediateTrading.json
+++ b/src/i18n/locales/id/intermediateTrading.json
@@ -1,10 +1,10 @@
 {
   "understandChartPatterns": "Pahami pola grafik",
   "makeYourTradingMore": "Jadikan perdagangan Anda lebih praktis dengan mempelajari data historis dan memahami pola grafik terkait.",
-  "intermediateTradingCourse": "Kursus perdagangan untuk pemula",
-  "basicTradingCourse": "Teori Perdagangan Menengah",
+  "intermediateTradingCourse": "Kursus Perdagangan Menengah",
+  "basicTradingCourse": "Kursus perdagangan untuk pemula",
   "advancedTradingCourse": "Teori Perdagangan Lanjutan",
-  "mT4Tips": "Tips MT4",
+  "MT4Tips": "Tips MT4",
   "riskManagement": "Manajemen risiko",
   "howToCreateATradingStrategy": "Bagaimana cara membuat strategi perdagangan?",
   "commonChartPatterns": "Pola grafik umum",
