--- a/src/i18n/locales/ms/intermediateTrading.json
+++ b/src/i18n/locales/ms/intermediateTrading.json
@@ -2,9 +2,9 @@
   "understandChartPatterns": "Memahami corak carta",
   "makeYourTradingMore": "Jadikan perdagangan anda lebih berguna dengan mengkaji data sejarah dan memahami corak carta yang berkaitan.",
   "intermediateTradingCourse": "Kursus perdagangan untuk pemula",
-  "basicTradingCourse": "Kursus Perdagangan Pertengahan",
+  "basicTradingCourse": "Kursus perdagangan untuk pemula",
   "advancedTradingCourse": "Kursus Perdagangan Lanjutan",
-  "mT4Tips": "Petua MT4",
+  "MT4Tips": "Petua MT4",
   "riskManagement": "Pengurusan Risiko",
   "howToCreateATradingStrategy": "Bagaimana ingin membuat strategi perdagangan?",
   "commonChartPatterns": "Corak carta biasa",
