--- a/src/i18n/locales/vi/intermediateTrading.json
+++ b/src/i18n/locales/vi/intermediateTrading.json
@@ -2,9 +2,9 @@
   "understandChartPatterns": "Hiểu các mẫu biểu đồ",
   "makeYourTradingMore": "Giúp giao dịch của bạn thuận tiện hơn bằng cách nghiên cứu dữ liệu lịch sử và hiểu các mẫu biểu đồ liên quan.",
   "intermediateTradingCourse": "Khóa học giao dịch cơ bản",
-  "basicTradingCourse": "Khóa học giao dịch trung cấp",
+  "basicTradingCourse": "Khóa học giao dịch cơ bản",
   "advancedTradingCourse": "khóa học giao dịch nâng cao",
-  "mT4Tips": "Mẹo MT4",
+  "MT4Tips": "Mẹo MT4",
   "riskManagement": "Quản lý rủi ro",
   "howToCreateATradingStrategy": "Làm thế nào để tạo một chiến lược giao dịch?",
   "commonChartPatterns": "Các mẫu biểu đồ phổ biến",
