--- a/src/i18n/locales/zh/basicTrading.json
+++ b/src/i18n/locales/zh/basicTrading.json
@@ -2,6 +2,7 @@
   "howToStartTrading": "如何開始進行交易",
   "haventHadExperience": "還未擁有金融交易的經驗？我們將一步步地指導您開始進行交易。",
   "basicTradingCourse": "初級交易課程",
+  "intermediateTradingCourse": "中級交易課程",
   "whatIsForeignExchangeTrading": "什麼是外匯交易",
   "factorsAffectingTheMarket": "影響市場的因素",
   "basicOperationOfTheMT4Platform": "MT4平台基礎操作",
@@ -73,7 +74,7 @@
   "productCategory": "7。交易品種：選擇交易對象",
   "lotsEnterTheLotSize": "手數：輸入交易量大小，最低為0.01手（外匯、黃金和白銀）。",
   "stopLossPrice": "止損價：當價格達到指定價格時，自動平倉停止損失；默認為零，代表不設置止損。",
-  "takeProfitprice": "獲利價：當價格達到指定價格時，自動平倉保住獲利；默認為零，代表不設置止盈。",
+  "takeProfitPrice": "獲利價：當價格達到指定價格時，自動平倉保住獲利；默認為零，代表不設置止盈。",
   "sellAtMarketPriceOrBuy": "於市價賣或於市價買：點擊紅色按鈕賣出，點擊藍色按鈕買入。",
   "theOrderTypeColumn": "訂單視窗內的「交易類型」欄目，默認選擇的是「市價成交」，意思是要按照當前市價建立交易。",
   "pendingOrder": "8。掛單交易",
@@ -125,7 +126,5 @@
   "commodityFuturesAreAlso": "大宗商品期貨也是一種金融資產，它代表了一種協議，即以預先確定的日期和價格買進或賣出一定數量的某種大宗商品，例如白金、銅或原油。由於大宗商品的價格總是隨著供求關係的變化而波動，交易者可以通過買賣大宗商品期貨來對其價格波動進行投機。如果您通過WCG交易白金差價合約，您可以預測白金在未來的價格會上漲還是下跌，從而決定是開買單還是賣單。WCG提供的大宗商品差價合約還包括銅和原油（德克薩斯輕質原油WTI和布倫特BRENT原油）。",
   "byOpeningAnAccountThrough": "通過WCG開戶，您可以在同一個平台、同一個帳戶上交易外匯以及股指或大宗商品差價合約。您將可以自如地穿梭于外匯市場和不同的差價合約市場中，并精確、高速地執行開倉和平倉操作。",
   "whatAreTheAdvantages": "差價合約交易有哪些優勢？",
-  "theMostSignificantAdvantage": "交易差價合約最為顯著的好處是，您可以使用高達100倍的槓桿，這意味著您能以更低的啟動資金以及相對較小的交易成本來開設更大金額的交易。需要注意的是，儘管槓桿可以放大盈利，它同時也會放大虧損，因此在進行差價合約的槓桿交易時，您需要採取合適的風險管理策略。差價合約還支持雙向交易，無論是熊市還是牛市，您都可以買賣自如，整個過程中WCG不會收取任何佣金或融資費用。在一個帳戶上交易所有產品，充分利用WCG為您提供的多重交易機會。",
-  "intermediateTradingCourse": "中級交易課程",
-  "advancedTradingCourse": "高級交易課程"
+  "theMostSignificantAdvantage": "交易差價合約最為顯著的好處是，您可以使用高達100倍的槓桿，這意味著您能以更低的啟動資金以及相對較小的交易成本來開設更大金額的交易。需要注意的是，儘管槓桿可以放大盈利，它同時也會放大虧損，因此在進行差價合約的槓桿交易時，您需要採取合適的風險管理策略。差價合約還支持雙向交易，無論是熊市還是牛市，您都可以買賣自如，整個過程中WCG不會收取任何佣金或融資費用。在一個帳戶上交易所有產品，充分利用WCG為您提供的多重交易機會。"
 }
