--- a/src/i18n/locales/en/basicTrading.json
+++ b/src/i18n/locales/en/basicTrading.json
@@ -2,6 +2,7 @@
   "howToStartTrading": "How to start trading",
   "haventHadExperience": "Haven't had experience in financial transactions? We will guide you step by step to start trading.",
   "basicTradingCourse": "Basic Trading Course",
+  "intermediateTradingCourse": "Intermediate Trading Course",
   "whatIsForeignExchangeTrading": "What is foreign exchange trading",
   "factorsAffectingTheMarket": "Factors affecting the market",
   "basicOperationOfTheMT4Platform": "Basic operation of the MT4 platform",
@@ -73,7 +74,7 @@
   "productCategory": "7. Product category: Choose your trading targets",
   "lotsEnterTheLotSize": "Lots: Enter the lot size, the minimum is 0.01 lots (foreign exchange, gold and silver).",
   "stopLossPrice": "Stop Loss Price: When the price reaches the specified price, the position is automatically closed out; the default is zero, which means no stop loss is set.",
-  "takeProfitprice": "Take Profit price: When the price reaches the specified price, the position will be automatically closed to keep the profit; the default is zero, which means no take profit is set.",
+  "takeProfitPrice": "Take Profit price: When the price reaches the specified price, the position will be automatically closed to keep the profit; the default is zero, which means no take profit is set.",
   "sellAtMarketPriceOrBuy": "Sell ​​at market price or buy at market price: click the red button to sell, and click the blue button to buy.",
   "theOrderTypeColumn": "The \"Order Type\" column in the order window, the default selection is \"Market Price\", which means to create a transaction at the current market price.",
   "pendingOrder": "8. Pending order",
@@ -125,7 +126,5 @@
   "commodityFuturesAreAlso": "Commodity futures are also a kind of financial asset. It represents an agreement to buy or sell a said amount of a certain commodity， such as platinum， copper or crude oil at a predetermined date and price. Since the prices of commodities always fluctuate with changes in supply and demand， traders can speculate on their price fluctuations by buying and selling commodity futures. If you trade platinum CFDs through WCG， you can predict whether the price of platinum will rise or fall in the future and decide whether to open a buy or sell order. The commodity CFDs provided by WCG also include copper and crude oil (Texas light crude oil WTI and BRENT crude oil).",
   "byOpeningAnAccountThrough": "By opening an account through WCG， you can trade foreign exchange and stock index or commodity CFDs on the same platform and account. You will be able to freely swift between the foreign exchange market and different CFD markets， open and close positions accurately.",
   "whatAreTheAdvantages": "What are the advantages of CFD trading？",
-  "theMostSignificantAdvantage": "The most significant advantage of trading CFDs is that you can use up to 100 times leverage， which means you can open larger transactions with lower starting capital and relatively small transaction costs. It should be noted that although leverage can magnify profits， it will also magnify losses. Therefore， you need to adopt appropriate risk management strategies when trading CFDs with leverage. CFDs also support two-ways trading， whether it is a bear market or a bull market， you can buy and sell freely， and the whole process you will not be charged any commission or financing fees. Trade all products on one account and take full advantage of the multiple trading opportunities that WCG provides you.",
-  "intermediateTradingCourse": "Intermediate Trading Course",
-  "advancedTradingCourse": "Advanced Trading Course"
+  "theMostSignificantAdvantage": "The most significant advantage of trading CFDs is that you can use up to 100 times leverage， which means you can open larger transactions with lower starting capital and relatively small transaction costs. It should be noted that although leverage can magnify profits， it will also magnify losses. Therefore， you need to adopt appropriate risk management strategies when trading CFDs with leverage. CFDs also support two-ways trading， whether it is a bear market or a bull market， you can buy and sell freely， and the whole process you will not be charged any commission or financing fees. Trade all products on one account and take full advantage of the multiple trading opportunities that WCG provides you."
 }
